# cryptid

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
examples/: basic_auth.py  cors.py  cors_test.html  schemathesis.py
examples/mocking/: mod1.py  mod2.py  test_summer.py
examples/test_double/: fake_mod1.py  mod2.py  test_summer.py
src/cryptid/: env.py  error.py  main.py
src/cryptid/data/: creature.py  explorer.py  init.py  user.py  xuser.py
src/cryptid/fake/: creature.py  explorer.py  user.py
src/cryptid/fake/data/: creature.py  explorer.py  user.py
src/cryptid/model/: auth.py  creature.py  explorer.py  token.py  user.py
src/cryptid/service/: auth.py  creature.py  explorer.py  user.py
src/cryptid/utils/: util.py
src/cryptid/web/: auth.py  creature.py  explorer.py  user.py
src/cryptonamicon/: main.py
src/cryptonamicon/data/: creature.py  explorer.py  init.py
src/cryptonamicon/fake/: creature.py  explorer.py
src/cryptonamicon/service/: creature.py  explorer.py
src/cryptonamicon/web/: creature.py  explorer.py
tests/: common.py
tests/data/: test_creature.py
tests/full/: common.py  conftest.py  test_creature.py  test_explorer.py  test_user.py  test_user_me.py
tests/service/: test_creature.py  test_explorer.py
tests/unit/: conftest.py
tests/unit/data/: test_creature.py  test_explorer.py  test_user.py  test_xuser.py
tests/unit/service/: test_creature.py  test_explorer.py  test_user.py
tests/unit/web/: common.py  test_creature.py  test_explorer.py  test_user.py  test_user_me.py
