[project]
name = "cryptonamicon"
version = "0.1.0"
description = "A web game with FastAPI"
authors = [
    { name = "Han-Seong Kwon", email = "hansung080@hanmail.net" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [
    { include = "cryptonamicon", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
