[project]
name = "cryptonamicon"
version = "0.1.0"
description = "A web game with FastAPI"
authors = [
    { name = "Han-Seong Kwon", email = "hansung080@hanmail.net" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "cryptonamicon", from = "src" },
]

[tool.poetry.scripts]
server = "src.cryptonamicon.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
