[project]
name = "cryptid"
version = "0.1.0"
description = "A web game with FastAPI"
authors = [
    { name = "Han-Seong Kwon", email = "hansung080@hanmail.net" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "starlette (>=0.47.3,<1.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "cryptid", from = "src" },
]

[tool.poetry.scripts]
server = "src.cryptid.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-env = "^1.1.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
env = [
    "CRYPTID_SQLITE_DB=:memory:",
]
